fix map spacing on large screens

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -62,6 +62,7 @@ header {
 .album {
 	position: relative;
 	display: block;
+	max-width: 1000px;
 }
 
 /* the images */
